boost: adfernandes taking maintainership, fixing and closing #24851, #23667, and #21444
git-svn-id: https://svn.macports.org/repository/macports/trunk@69974 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/boost/Portfile
+++ b/dports/devel/boost/Portfile
@@ -4,7 +4,7 @@
 PortSystem      1.0
 
 name            boost
-version         1.42.0
+version         1.43.0
 license         Boost-1.0
 categories      devel
 platforms       darwin
@@ -18,19 +18,13 @@ long_description \
 
 homepage        http://www.boost.org
 master_sites    sourceforge
-distname        ${name}_[join [split ${version} .] _]
+set distver     [join [split ${version} .] _]
+distname        ${name}_${distver}
 use_bzip2       yes
 
-checksums       md5     7bf3b4eb841b62ffb0ade2b82218ebe6 \
-                sha1    3ce3bb1a1bed504635287017f9e628597b409e7b \
-                rmd160  90cea6aaa35f22b97e6eb3f5879ca9fe21098349
-
-patchfiles      patch-libs-random-random_device.cpp.diff
-
-post-extract {
-    file mkdir ${worksrcpath}/libs/random/build
-    copy ${filespath}/libs-random-build-Jamfile.v2 ${worksrcpath}/libs/random/build/Jamfile.v2
-}
+checksums       md5     dd49767bfb726b0c774f7db0cef91ed1 \
+                sha1    b8257b7da2a7222739314f8d1e07e217debe71d6 \
+                rmd160  950fe7c50ed8644ceffd8e494a8e0636037adacd
 
 depends_build   path:bin/bjam:boost-jam
 
@@ -60,7 +54,7 @@ build.args      -d2 \
                 -sZLIB_INCLUDE=${prefix}/include \
                 -sZLIB_LIBPATH=${prefix}/lib \
                 threading=single,multi \
-                variant=debug,release
+                variant=release
 
 use_parallel_build  no
 
@@ -89,7 +83,7 @@ post-destroot {
     }
 }
 
-set pythons_suffixes {24 25 26}
+set pythons_suffixes {24 25 26 27 31}
 
 set pythons_ports {}
 foreach s ${pythons_suffixes} {
@@ -120,7 +114,9 @@ foreach s ${pythons_suffixes} {
     set i [lsearch -exact ${pythons_ports} ${p}]
     set c [lreplace ${pythons_ports} ${i} ${i}]
     eval [subst {
-        variant ${p} description "Build Boost.Python for Python ${v}" conflicts ${c} {
+        variant ${p} description "Build Boost.Python for Python ${v}" conflicts ${c} debug {
+            # Cannot build debug variants with openmpi and python variants as per the following:
+            # <http://trac.macports.org/ticket/23667> and <https://svn.boost.org/trac/boost/ticket/4461>
             patchfiles-append   patch-tools-build-v2-tools-python.jam.diff
 
             post-patch {
@@ -131,10 +127,15 @@ foreach s ${pythons_suffixes} {
             build.args-delete   --without-python
 
             post-configure {
-                write_jam "using python : : ${prefix}/bin/python${v} ;"
+                write_jam "using python : : ${prefix}/bin/python${v} : : ${prefix}/lib ;"
             }
         }
     }]
+}
+
+variant debug description {Builds debug versions of the libraries as well} conflicts openmpi {
+    build.args-delete   variant=release
+    build.args-append   variant=debug,release
 }
 
 variant icu description {Enable Unicode support in Boost.Regex through ICU} {
@@ -142,7 +143,9 @@ variant icu description {Enable Unicode support in Boost.Regex through ICU} {
     build.args-append   -sICU_PATH=${prefix}
 }
 
-variant openmpi description {Build Boost.MPI} {
+variant openmpi description {Build Boost.MPI} conflicts debug {
+    # Cannot build debug variants with openmpi and python variants as per the following:
+    # <http://trac.macports.org/ticket/23667> and <https://svn.boost.org/trac/boost/ticket/4461>
     depends_lib-append  port:openmpi
     build.args-delete   --without-mpi
 
@@ -171,7 +174,7 @@ variant regex_match_extra description \
     notes \
         You enabled +regex_match_extra variant, see the following page for an \
         exhaustive list of the consequences of this feature:\n\t \
-        http://www.boost.org/doc/libs/1_41_0/libs/regex/doc/html/boost_regex/ref/sub_match.html
+        http://www.boost.org/doc/libs/${distver}/libs/regex/doc/html/boost_regex/ref/sub_match.html
 
     post-patch {
         reinplace {/#define BOOST_REGEX_MATCH_EXTRA/s:^// ::} \
