homebank: set missing execute bit on install-sh (#24431)
git-svn-id: https://svn.macports.org/repository/macports/trunk@69980 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/homebank/Portfile
+++ b/dports/x11/homebank/Portfile
@@ -28,5 +28,9 @@ depends_lib         port:gtk2 \
                     port:librsvg \
                     port:p5-xml-parser
 
+post-patch {
+    file attributes ${worksrcpath}/install-sh -permissions +x
+}
+
 livecheck.type      regex
 livecheck.regex     "HomeBank (\\d+(?:\\.\\d+)*) released"
