kile-devel: disable universal due to non-universal dependencies (#25799)
git-svn-id: https://svn.macports.org/repository/macports/trunk@69982 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/tex/kile-devel/Portfile
+++ b/dports/tex/kile-devel/Portfile
@@ -30,3 +30,5 @@ depends_lib         port:kdelibs4 \
                     port:kdegraphics4
 
 configure.args-append ../${distname}
+
+universal_variant   no
