--- a/dports/perl/p5-tk/Portfile
+++ b/dports/perl/p5-tk/Portfile
@@ -2,19 +2,15 @@
 
 PortSystem          1.0
 PortGroup           perl5 1.0
-perl5.setup         Tk 804.028
-revision            1
+
+perl5.setup         Tk 804.029
 maintainers         nomaintainer
 description         p5-tk is a Perl interface to Tk
 long_description    ${description}
 
 platforms           darwin
 
-checksums           md5 7153c1c411b0dd005a0660179e5c5900
+checksums           md5 f4aebe6fcdb309a8480514f2ccf8117c \
+                    sha1 1076d736e43fdf416c664bde0e4c3d035d6903e3
 
 depends_lib-append  port:tk port:p5-term-readkey
-
-# Work around issue with newer X libraries, see 
-# http://rt.cpan.org/Public/Bug/Display.html?id=38746
-patchfiles          patch-pTk_mTk_generic_tk.h.diff
-
