Update to 3.0.8 and add version number to top of sample config file.
git-svn-id: https://svn.macports.org/repository/macports/trunk@69984 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/sysutils/syslog-ng/Portfile
+++ b/dports/sysutils/syslog-ng/Portfile
@@ -3,10 +3,10 @@
 PortSystem 1.0
 
 name			syslog-ng
-version			3.0.5
+version			3.0.8
 categories		sysutils
 platforms		darwin
-maintainers		markd
+maintainers		markd openmaintainer
 description		Highly configurable syslog replacement.
 long_description	syslog-ng is the world's most flexible and scalable audit \
 					trail processing tool for organizations of any size. It \
@@ -18,7 +18,7 @@ long_description	syslog-ng is the world's most flexible and scalable audit \
 
 homepage			http://www.balabit.com/products/syslog_ng/
 master_sites			http://www.balabit.com/downloads/files/syslog-ng/open-source-edition/${version}/source/
-checksums			md5 28f0d9ff2243b330e8cd6311ef9b2f12
+checksums			md5 7107f5758dec4b774136f0f827b35258
 distfiles			${name}_${version}${extract.suffix}
 patchfiles			patch-src-Makefile.in.diff
 
@@ -38,25 +38,30 @@ platform powerpc	{
 	configure.args-append		--host=powerpc
 }
 
+pre-destroot {
+# Append the major.minor version number to the top of the sample config
+	set major_minor [join [lrange [split ${version} .] 0 1] .]
+	system "echo version $major_minor >> ${worksrcpath}/doc/examples/header"
+	system "cat ${worksrcpath}/doc/examples/header ${worksrcpath}/doc/examples/syslog-ng.conf.sample \
+		> ${worksrcpath}/doc/examples/syslog-ng.conf-dist"
+}
+
 post-destroot	{
-	xinstall -m 644 ${worksrcpath}/doc/examples/syslog-ng.conf.sample \
+	xinstall -m 644 ${worksrcpath}/doc/examples/syslog-ng.conf-dist \
 		${destroot}${prefix}/etc
 	xinstall -m 755 -d ${destroot}${prefix}/share/doc/${name}
 	xinstall -m 644 -W ${worksrcpath} ChangeLog README AUTHORS COPYING NEWS \
 		${destroot}${prefix}/share/doc/${name}
 	reinplace "s|/dev/log|/var/run/syslog|g" \
-		${destroot}${prefix}/etc/syslog-ng.conf.sample
+		${destroot}${prefix}/etc/syslog-ng.conf-dist
 }
 
-post-activate {
-ui_msg "\n
-
-To use syslog-ng, first unload OS X's built-in syslog daemon:
+notes \
+"To use syslog-ng, first unload OS X's built-in syslog daemon:
 
 	sudo launchctl unload -w /System/Library/LaunchDaemons/com.apple.syslogd.plist
 
-Then customize ${prefix}/etc/syslog-ng.conf and load syslog-ng:
+Then copy ${prefix}/etc/syslog-ng.conf-dist to ${prefix}/etc/syslog-ng.conf,
+customize, and load syslog-ng:
 
-	sudo launchctl load -w /Library/LaunchDaemons/org.macports.syslog-ng.plist
-\n"
-}
+	sudo launchctl load -w /Library/LaunchDaemons/org.macports.syslog-ng.plist"
