--- a/dports/net/dynamips/Portfile
+++ b/dports/net/dynamips/Portfile
@@ -30,7 +30,7 @@ depends_lib	port:libelf \
 		port:libpcap
 
 patchfiles	Makefile.diff
-configure {}
+use_configure no
 
 # patch.pre_args set to allow use of unmodified idle_pcs patch from developer
 patch.pre_args	-p1
@@ -38,8 +38,9 @@ patch.pre_args	-p1
 build.pre_args-append		PREFIX=${prefix}
 destroot.pre_args-append	PREFIX=${prefix}
 
-# compile using nojit if on PowerPC platform
-if {${os.arch} == "powerpc"} {
+# compile using nojit if on non-i386 platform
+# is meant to work on x86_64 too but apparently crashes; ticket #22285
+if {${build_arch} != "i386"} {
 	build.pre_args-append		DYNAMIPS_ARCH=nojit
 	destroot.pre_args-append	DYNAMIPS_ARCH=nojit
 }
