Do not hardcode prefix in mochiweb's README
git-svn-id: https://svn.macports.org/repository/macports/trunk@69988 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/erlang/mochiweb/Portfile
+++ b/dports/erlang/mochiweb/Portfile
@@ -5,6 +5,7 @@ PortSystem      1.0
 name            mochiweb
 epoch           20100724
 version         16f560
+revision        1
 categories      erlang www
 platforms       darwin
 maintainers     nox
@@ -35,6 +36,7 @@ destroot {
     xinstall -m 644 -W ${worksrcpath} LICENSE README ${destroot}${docdir}
     copy ${worksrcpath}/doc ${destroot}${docdir}/html
     xinstall -m 644 ${filespath}/README.MacPorts ${destroot}${docdir}
+    reinplace s:@PREFIX@:${prefix}: ${destroot}${docdir}/README.MacPorts
 }
 
 test.run yes
