update version, fix livecheck
git-svn-id: https://svn.macports.org/repository/macports/trunk@69990 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/php/php5-suhosin/Portfile
+++ b/dports/php/php5-suhosin/Portfile
@@ -4,7 +4,7 @@
 PortSystem		    1.0
 PortGroup           php5extension 1.0
 
-php5extension.setup suhosin 0.9.31
+php5extension.setup suhosin 0.9.32.1
 categories-append   security www
 license             PHPv3.01
 maintainers         snc openmaintainer
@@ -20,14 +20,12 @@ long_description    Suhosin is an advanced protection system for PHP\
 platforms           darwin freebsd
 
 master_sites        http://download.suhosin.org/
-extract.suffix      .tgz
 
-checksums           md5     70df3405806ee62a952510ded002dccd \
-                    sha1    6cdfbda3abfe8f5ca728588a71665db726281125 \
-                    rmd160  51c8ae0713e78e6e3e96ecbbaa8d82dd3a57acea
+checksums           md5     26a86f0f684a656c3e789e3eb4ec1db3 \
+                    sha1    93fcb1d5f96691c4c50808a14dd3d6d4bbfea451
 
 test.run            yes
 
 livecheck.type      regex
 livecheck.url       http://www.hardened-php.net/suhosin/download.html
-livecheck.regex     suhosin-(\[0-9.\]+)\\.tgz
+livecheck.regex     suhosin-(\\d+(\\.\\d+)+)
