--- a/dports/python/py26-shapely/Portfile
+++ b/dports/python/py26-shapely/Portfile
@@ -5,7 +5,7 @@ PortSystem      1.0
 PortGroup       python26 1.0
 
 name            py26-shapely
-version         1.2.1
+version         1.2.2
 categories      python devel
 platforms       darwin
 maintainers     snc openmaintainer
@@ -27,9 +27,8 @@ dist_subdir     python
 depends_lib-append      port:geos
 depends_build-append    port:py26-distribute
 
-checksums           md5     dd175b6b9f169519920fe79e3c4cd4ca \
-                    sha1    e8cb01b2d16c083c51f5562d800f0ca3292d2d11 \
-                    rmd160  8c1f0cfff1cd7026fc32ea59959213f98c2b463e
+checksums           md5     f5fac5f7d3eebaf971cf5c6f72b76f7f \
+                    sha1    81449a8cf08a5b1aba0fb7f3ed347850c7dfec61
 
 patchfiles      patch-shapely_geos.py.diff \
                 patch-setup.py.diff
