--- a/dports/tex/sketch/Portfile
+++ b/dports/tex/sketch/Portfile
@@ -4,7 +4,7 @@
 PortSystem          1.0
 
 name                sketch
-version             0.2.170
+version             0.2.171
 categories          tex
 maintainers         snc openmaintainer
 description         2D and 3D drawings with LaTeX output.
@@ -18,9 +18,8 @@ platforms           darwin
 depends_run         bin:latex:texlive
 
 master_sites        ${homepage}
-checksums           md5     551796b8e28eb40aeba92b356756d760 \
-                    sha1    8ea618396dc546950ab64dbb0382b5e3895ab27d \
-                    rmd160  a0caad9fabe02f220f0f7ca0d6393b5647ef391f
+checksums           md5     94a97f67ed388c7d024f6ca511eba5cb \
+                    sha1    81a6cbeb9ce7b3bb017b48069c34e20786c0e429
 
 extract.suffix      .tgz
 
