--- a/dports/math/pspp-devel/Portfile
+++ b/dports/math/pspp-devel/Portfile
@@ -4,10 +4,10 @@
 PortSystem          1.0
 
 name                pspp-devel
-set buildstamp      20100723040501
-set buildhash       gf338eb
+set buildstamp      20100725040501
+set buildhash       g1d2139
 version             0.7.5
-revision            10
+revision            11
 categories          math
 license             GPLv3+
 maintainers         snc
@@ -37,8 +37,8 @@ depends_lib		    port:gsl \
                     port:libglade2 \
                     port:libtool
 
-checksums           sha1    2c6d5f30812e6acddc5ab47920bbb9f69f627033 \
-                    rmd160  fc5df631bb56e8568cf039f87ab82a6e46486caa
+checksums           sha1    e4a8a071ff6560943c4e3c4ea9491b256e73c6bd \
+                    rmd160  0482b0800edea13a7f9ac363d9cf63d414af6863
 
 #configure.optflags  -O0
 #configure.cflags-append -g
