git-core: fix gitweb variant (#25805)
git-svn-id: https://svn.macports.org/repository/macports/trunk@70002 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/git-core/Portfile
+++ b/dports/devel/git-core/Portfile
@@ -102,7 +102,7 @@ variant gitweb description {Install gitweb.cgi} {
         xinstall -W ${worksrcpath}/gitweb \
             gitweb.cgi \
             ${destroot}${prefix}/share/${name}/gitweb
-        xinstall -m 444 -W ${worksrcpath}/gitweb \
+        xinstall -m 444 -W ${worksrcpath}/gitweb/static \
             gitweb.css \
             gitweb.js \
             git-favicon.png \
