--- a/dports/perl/p5-file-rsyncp/Portfile
+++ b/dports/perl/p5-file-rsyncp/Portfile
@@ -7,7 +7,7 @@ PortGroup               perl5 1.0
 perl5.setup             File-RsyncP 0.68
 platforms               darwin
 license                 GPLv2+
-maintainers             jmr openmaintainer
+maintainers             nomaintainer
 description             A Perl implementation of an Rsync client.
 long_description        ${description}
 
