--- a/dports/python/py26-sphinx/Portfile
+++ b/dports/python/py26-sphinx/Portfile
@@ -5,8 +5,8 @@ PortSystem          1.0
 PortGroup           python26 1.0
 
 name                py26-sphinx
-version             0.6.7
-categories-append   devel
+version             1.0
+categories-append   textproc devel
 license             BSD
 maintainers         jmr openmaintainer
 description         Python documentation generator
@@ -24,9 +24,9 @@ homepage            http://sphinx.pocoo.org/
 master_sites        http://pypi.python.org/packages/source/S/Sphinx/
 distname            Sphinx-${version}
 
-checksums           md5 54c3e4045ee4a4997a50c225f36e92fd \
-                    sha1 d333163317ba5a26653ffe439f8ce142ce181ff9 \
-                    rmd160 824dd7b7f3df61af0e639a19be1bf0080749e12c
+checksums           md5 173baed4a71355fc3c908da1f6ab4156 \
+                    sha1 7e492abb6e95de427fc1d33643f0bf276be10c3e \
+                    rmd160 f95895a29a825edf5043c880870ea6ea5243ddcf
 
 depends_lib         port:py26-docutils
 depends_run         port:py26-pygments \
