Retiring as maintainer, thanks for all your help.
git-svn-id: https://svn.macports.org/repository/macports/trunk@70012 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/archivers/p7zip/Portfile
+++ b/dports/archivers/p7zip/Portfile
@@ -5,7 +5,7 @@ PortSystem      1.0
 name            p7zip
 version         9.04
 categories      archivers
-maintainers     simon openmaintainer
+maintainers     nomaintainer
 platforms       darwin
 description     7-Zip implementation
 
