--- a/dports/audio/taglib-sharp/Portfile
+++ b/dports/audio/taglib-sharp/Portfile
@@ -6,7 +6,7 @@ name                taglib-sharp
 version             2.0.3.0
 categories          audio
 platforms           darwin
-maintainers         simon openmaintainer
+maintainers         nomaintainer
 description         C# implementation of TagLib.
 long_description    ${description} TagLib is a library for reading and \
                     editing the meta-data of several popular audio formats.
