--- a/dports/databases/tdb/Portfile
+++ b/dports/databases/tdb/Portfile
@@ -6,7 +6,7 @@ name                tdb
 version             1.0.6
 categories          databases
 platforms           darwin
-maintainers         simon openmaintainer
+maintainers         nomaintainer
 description         TDB is a Trivial Database
 long_description    TDB is a Trivial Database. In concept, it is very much \
                     like GDBM, and BSD's DB except that it allows multiple \
