--- a/dports/devel/dbus-glib-sharp/Portfile
+++ b/dports/devel/dbus-glib-sharp/Portfile
@@ -6,7 +6,7 @@ name                dbus-glib-sharp
 version             0.4.1
 categories          devel
 platforms           darwin
-maintainers         simon openmaintainer
+maintainers         nomaintainer
 description         C# implementation of D-Bus-Glib
 long_description    ${description}. D-Bus is an inter-process communication \
                     framework that lets applications interface with the \
