--- a/dports/devel/libdevil/Portfile
+++ b/dports/devel/libdevil/Portfile
@@ -7,7 +7,7 @@ version             1.7.8
 revision            1
 categories          devel multimedia
 platforms           darwin
-maintainers         simon openmaintainer
+maintainers         nomaintainer
 description         Library to develop applications with powerful image \
                     loading capabilities
 long_description    Developer's Image Library (DevIL) is a programmer's \
