--- a/dports/games/glob2/Portfile
+++ b/dports/games/glob2/Portfile
@@ -7,7 +7,7 @@ version             0.9.3
 revision            2
 categories          games
 platforms           darwin
-maintainers         simon openmaintainer
+maintainers         nomaintainer
 description         Globulation 2 - a free and innovative strategy game
 long_description    Globulation 2 is an innovative high quality Real-Time \
                     Strategy, which minimizes micro-management by \
