--- a/dports/games/rrgbis/Portfile
+++ b/dports/games/rrgbis/Portfile
@@ -8,7 +8,7 @@ revision            1
 set data_version    1.11
 categories          games
 platforms           darwin
-maintainers         simon openmaintainer
+maintainers         nomaintainer
 description         Real time strategy game with fleets of spaceships.
 long_description    ${description}
 
