--- a/dports/graphics/gocr/Portfile
+++ b/dports/graphics/gocr/Portfile
@@ -7,7 +7,7 @@ version			0.48
 revision		1
 categories		graphics
 platforms		darwin
-maintainers		simon openmaintainer
+maintainers		nomaintainer
 description		Optical Character Recognition, converts images back to text
 long_description	GOCR is an OCR (Optical Character Recognition) program. It \
 				converts scanned images of text back to text files.
