--- a/dports/graphics/quesoglc/Portfile
+++ b/dports/graphics/quesoglc/Portfile
@@ -6,7 +6,7 @@ name                quesoglc
 version             0.7.2
 categories          graphics
 platforms           darwin
-maintainers         simon openmaintainer
+maintainers         nomaintainer
 description         QuesoGLC is a free implementation of the OpenGL \
                     Character Renderer (GLC).
 long_description    ${description} QuesoGLC is based on the FreeType \
