--- a/dports/mail/perfect_maildir/Portfile
+++ b/dports/mail/perfect_maildir/Portfile
@@ -6,7 +6,7 @@ name                perfect_maildir
 version             0.3
 categories          mail
 platforms           darwin
-maintainers         simon openmaintainer
+maintainers         nomaintainer
 description         Simple but Perfect mbox to Maildir converter
 long_description    ${description} by Philip Mak.
 
