--- a/dports/net/rsync/Portfile
+++ b/dports/net/rsync/Portfile
@@ -6,7 +6,7 @@ name                rsync
 version             3.0.7
 categories          net
 platforms           darwin freebsd sunos
-maintainers         simon openmaintainer
+maintainers         nomaintainer
 description         Tool that provides fast incremental file transfer.
 long_description    rsync is an open source utility that provides fast \
                     incremental file transfer. rsync is freely available \
