--- a/dports/perl/p5-encode-hanextra/Portfile
+++ b/dports/perl/p5-encode-hanextra/Portfile
@@ -5,7 +5,7 @@ PortGroup           perl5 1.0
 
 perl5.setup         Encode-HanExtra 0.23
 platforms           darwin
-maintainers         simon openmaintainer
+maintainers         nomaintainer
 description         Extra sets of Chinese encodings
 long_description    ${description}
 
