--- a/dports/perl/p5-encode-jis2k/Portfile
+++ b/dports/perl/p5-encode-jis2k/Portfile
@@ -5,7 +5,7 @@ PortGroup           perl5 1.0
 
 perl5.setup         Encode-JIS2K 0.02
 platforms           darwin
-maintainers         simon openmaintainer
+maintainers         nomaintainer
 description         JIS X 0212 (aka JIS 2000) Encodings
 long_description    This module implements encodings that covers JIS X 0213 \
                     charset (AKA JIS 2000, hence the module name).
