--- a/dports/perl/p5-encode/Portfile
+++ b/dports/perl/p5-encode/Portfile
@@ -5,7 +5,7 @@ PortGroup           perl5 1.0
 
 perl5.setup         Encode 2.26
 platforms           darwin
-maintainers         simon openmaintainer
+maintainers         nomaintainer
 description         Character encoding module
 long_description    The "Encode" module provides the interfaces between \
                     Perl's strings and the rest of the system. Perl strings \
