--- a/dports/perl/p5-html-encoding/Portfile
+++ b/dports/perl/p5-html-encoding/Portfile
@@ -5,7 +5,7 @@ PortGroup           perl5 1.0
 
 perl5.setup         HTML-Encoding 0.60
 platforms           darwin
-maintainers         simon openmaintainer
+maintainers         nomaintainer
 description         Determines the encoding of HTML and XML/XHTML documents
 long_description    ${description}
 
