--- a/dports/perl/p5-mail-spamassassin/Portfile
+++ b/dports/perl/p5-mail-spamassassin/Portfile
@@ -7,7 +7,7 @@ perl5.setup         Mail-SpamAssassin 3.2.5
 revision            3
 categories-append   mail
 platforms           darwin
-maintainers         simon openmaintainer
+maintainers         nomaintainer
 description         mail filter to identify spam
 long_description    SpamAssassin(tm) is a mail filter to identify spam. \
                     Using its rule base, it uses a wide range of \
