--- a/dports/perl/p5-sgml-parser-opensp/Portfile
+++ b/dports/perl/p5-sgml-parser-opensp/Portfile
@@ -5,7 +5,7 @@ PortGroup           perl5 1.0
 
 perl5.setup         SGML-Parser-OpenSP 0.994
 platforms           darwin
-maintainers         simon openmaintainer
+maintainers         nomaintainer
 description         Provides an interface to the OpenSP SGML parser.
 long_description    ${description}
 
