--- a/dports/python/py25-coverage/Portfile
+++ b/dports/python/py25-coverage/Portfile
@@ -8,7 +8,7 @@ name                py25-coverage
 version             3.0.1
 categories-append   devel
 platforms           darwin
-maintainers         simon openmaintainer
+maintainers         nomaintainer
 description         Code coverage tool for Python
 long_description    Coverage.py is a Python module that measures code \
                     coverage during Python execution. It uses the code \
