--- a/dports/science/bkchem/Portfile
+++ b/dports/science/bkchem/Portfile
@@ -7,7 +7,7 @@ name                bkchem
 version             0.12.5
 categories          science python
 platforms           darwin
-maintainers         simon openmaintainer
+maintainers         nomaintainer
 description         Free chemical drawing program.
 long_description    Free chemical drawing program written in Python by Beda \
                     Kosata.
