--- a/dports/science/ghemical/Portfile
+++ b/dports/science/ghemical/Portfile
@@ -6,7 +6,7 @@ name                ghemical
 version             2.98
 categories          science
 platforms           darwin
-maintainers         simon openmaintainer
+maintainers         nomaintainer
 description         Ghemical is computational chemistry package
 long_description    Ghemical is a computational chemistry software package \
                     written in C++ and released under the GNU GPL. The \
