--- a/dports/science/jmol/Portfile
+++ b/dports/science/jmol/Portfile
@@ -6,7 +6,7 @@ name                jmol
 version             11.6.17
 categories          science
 platforms           darwin
-maintainers         simon openmaintainer
+maintainers         nomaintainer
 description         An open-source Java viewer for chemical structures in 3D
 long_description    Jmol is a free, open source molecule viewer for \
                     students, educators, and researchers in chemistry and \
