--- a/dports/science/libghemical/Portfile
+++ b/dports/science/libghemical/Portfile
@@ -6,7 +6,7 @@ name                libghemical
 version             2.98
 categories          science
 platforms           darwin
-maintainers         simon openmaintainer
+maintainers         nomaintainer
 description         Library for the ghemical port.
 long_description    $description
 
