--- a/dports/security/paperkey/Portfile
+++ b/dports/security/paperkey/Portfile
@@ -6,7 +6,7 @@ name                paperkey
 version             1.0
 categories          security
 platforms           darwin
-maintainers         simon openmaintainer
+maintainers         nomaintainer
 description         Paperkey - an OpenPGP key archiver
 long_description    ${description}. A reasonable way to achieve a long term \
                     backup of OpenPGP (GnuPG, PGP, etc) keys is to print \
