--- a/dports/sysutils/tree/Portfile
+++ b/dports/sysutils/tree/Portfile
@@ -6,7 +6,7 @@ name                tree
 version             1.5.2.2
 categories          sysutils
 platforms           darwin
-maintainers         simon openmaintainer
+maintainers         nomaintainer
 description         display tree-view of directories with optional color/HTML output
 long_description    Tree is a simple utility that displays a tree-view of \
                     directories and files. It has options to use ANSI color \
