--- a/dports/textproc/pmw/Portfile
+++ b/dports/textproc/pmw/Portfile
@@ -7,7 +7,7 @@ name                pmw
 version             4.12
 categories          textproc audio
 platforms           darwin
-maintainers         simon openmaintainer
+maintainers         nomaintainer
 description         music typesetting processor generating PostScript
 long_description    Philips Music Writer (PMW) is a computer program for \
                     high quality music typesetting generating PostScript \
