--- a/dports/textproc/rxp/Portfile
+++ b/dports/textproc/rxp/Portfile
@@ -6,7 +6,7 @@ name                rxp
 version             1.4.8
 categories          textproc
 platforms           darwin
-maintainers         simon openmaintainer
+maintainers         nomaintainer
 description         Validating XML parser written in C.
 long_description    RXP is a validating XML parser written in C. \
                     The current version of RXP supports XML 1.1, Namespaces \
