--- a/dports/www/elinks/Portfile
+++ b/dports/www/elinks/Portfile
@@ -8,7 +8,7 @@ version             0.11.7
 revision        1
 categories          www
 platforms           darwin
-maintainers         simon openmaintainer
+maintainers         nomaintainer
 description         text mode web browser
 long_description    ELinks is an advanced and well-established feature-rich \
                     text mode web (HTTP/FTP/..) browser.  ELinks can render \
