--- a/dports/devel/dbus-sharp/Portfile
+++ b/dports/devel/dbus-sharp/Portfile
@@ -6,7 +6,7 @@ name                dbus-sharp
 version             0.6.0
 categories          devel
 platforms           darwin
-maintainers         simon openmaintainer
+maintainers         nomaintainer
 description         C# implementation of D-Bus
 long_description    ${description}. D-Bus is an inter-process communication \
                     framework that lets applications interface with the \
