--- a/dports/devel/diffstat/Portfile
+++ b/dports/devel/diffstat/Portfile
@@ -5,7 +5,7 @@ PortSystem 1.0
 name                    diffstat
 version                 1.51
 categories              devel
-maintainers             simon openmaintainer
+maintainers             nomaintainer
 description             Make histogram from diff-output
 long_description        diffstat reads the output of diff and displays a histogram\
                         of the insertions, deletions, and modifications per-file.\
