--- a/dports/games/spacehulk/Portfile
+++ b/dports/games/spacehulk/Portfile
@@ -6,7 +6,7 @@ name                spacehulk
 version             1.5-beta1
 categories          games
 platforms           darwin
-maintainers         simon openmaintainer
+maintainers         nomaintainer
 description         Space Hulk is a great board game of Games Workshop in \
                     the world of Warhammer 40000.
 long_description    Space Hulk is a great board game of Games Workshop in \
