--- a/dports/graphics/exif/Portfile
+++ b/dports/graphics/exif/Portfile
@@ -6,7 +6,7 @@ name                exif
 version             0.6.19
 categories          graphics
 platforms           darwin
-maintainers         simon openmaintainer
+maintainers         nomaintainer
 description         Command line tool to read, write, modify and display \
                     EXIF data
 long_description    Command line utility to read, write, modify and display \
