--- a/dports/lang/lua50/Portfile
+++ b/dports/lang/lua50/Portfile
@@ -5,7 +5,7 @@ PortSystem              1.0
 name                    lua50
 version                 5.0.3
 categories              lang
-maintainers             simon openmaintainer
+maintainers             nomaintainer
 description             powerful, light-weight programming language
 long_description        Lua is a powerful, light-weight programming language \
 			designed for extending applications. Lua is also frequently \
