--- a/dports/mail/mutt-devel/Portfile
+++ b/dports/mail/mutt-devel/Portfile
@@ -7,7 +7,7 @@ version             1.5.20
 revision            4
 categories          mail
 platforms           darwin
-maintainers         simon openmaintainer
+maintainers         nomaintainer
 description         Mongrel of Mail User Agents (part Elm, Pine, Mush, mh, etc)
 long_description    Mutt -- "The Mongrel of Mail User Agents" (part Elm, \
                     part Pine, part mh, part slrn, part everything else) is \
