--- a/dports/mail/mutt/Portfile
+++ b/dports/mail/mutt/Portfile
@@ -7,7 +7,7 @@ version             1.4.2.3
 revision            1
 categories          mail
 platforms           darwin linux
-maintainers         simon openmaintainer
+maintainers         nomaintainer
 description         Mongrel of Mail User Agents (part Elm, Pine, Mush, mh, etc)
 long_description    Mutt -- "The Mongrel of Mail User Agents" (part Elm, \
                     part Pine, part mh, part slrn, part everything else) is \
