--- a/dports/multimedia/libgpod/Portfile
+++ b/dports/multimedia/libgpod/Portfile
@@ -6,7 +6,7 @@ name                libgpod
 version             0.7.2
 categories          multimedia
 platforms           darwin
-maintainers         simon openmaintainer
+maintainers         nomaintainer
 description         libgpod is a library to access the contents of an iPod.
 long_description    ${description} This library is based on code used in the \
                     gtkpod project. Starting with V0.96.CVS gtkpod depends \
