--- a/dports/net/libudns/Portfile
+++ b/dports/net/libudns/Portfile
@@ -6,7 +6,7 @@ name                libudns
 version             0.0.9
 categories          net
 platforms           darwin
-maintainers         simon openmaintainer
+maintainers         nomaintainer
 description         DNS resolver library
 long_description    UDNS is a stub DNS resolver library with ability to \
                     perform both syncronous and asyncronous DNS queries.
