--- a/dports/net/tcpflow/Portfile
+++ b/dports/net/tcpflow/Portfile
@@ -6,7 +6,7 @@ name             tcpflow
 version          0.21
 revision         2
 categories       net security
-maintainers      simon openmaintainer
+maintainers      nomaintainer
 description      TCP flow recorder
 long_description \
     tcpflow is a program that captures data transmitted as part of TCP \
