--- a/dports/science/chemtool/Portfile
+++ b/dports/science/chemtool/Portfile
@@ -6,7 +6,7 @@ name                chemtool
 version             1.6.11
 categories          science
 platforms           darwin
-maintainers         simon openmaintainer
+maintainers         nomaintainer
 description         Chemtool is a small program for drawing chemical structures
 long_description    ${description}
 
