--- a/dports/science/liboglappth/Portfile
+++ b/dports/science/liboglappth/Portfile
@@ -6,7 +6,7 @@ name                liboglappth
 version             0.98
 categories          science
 platforms           darwin
-maintainers         simon openmaintainer
+maintainers         nomaintainer
 description         Library for the ghemical port.
 long_description    $description
 
