--- a/dports/x11/homebank/Portfile
+++ b/dports/x11/homebank/Portfile
@@ -6,7 +6,7 @@ name                homebank
 version             4.2.1
 categories          x11
 platforms           darwin
-maintainers         simon openmaintainer
+maintainers         nomaintainer
 description         Software to manage personal accounts, light and simple.
 long_description    HomeBank is the free software you have always wanted to \
                     manage your personal accounts at home. The main concept \
