--- a/dports/devel/subversion-python26bindings/Portfile
+++ b/dports/devel/subversion-python26bindings/Portfile
@@ -48,8 +48,8 @@ configure.args		--with-berkeley-db=:${prefix}/include/db46:${prefix}/lib/db46:db
 
 configure.env		ac_cv_path_PYTHON=${prefix}/bin/python2.6 \
 			ac_cv_python_includes=-I${frameworks_dir}/Python.framework/Versions/2.6/include/python2.6 \
-			ac_cv_python_link="${configure.compiler} -L${prefix}lib -bundle -undefined dynamic_lookup ${frameworks_dir}/Python.framework/Versions/2.6/Python" \
-			ac_cv_python_libs="-L${prefix}lib -bundle -undefined dynamic_lookup ${frameworks_dir}/Python.framework/Versions/2.6/Python"
+			ac_cv_python_link="${configure.compiler} -L${prefix}/lib -bundle -undefined dynamic_lookup ${frameworks_dir}/Python.framework/Versions/2.6/Python" \
+			ac_cv_python_libs="-L${prefix}/lib -bundle -undefined dynamic_lookup ${frameworks_dir}/Python.framework/Versions/2.6/Python"
 use_parallel_build      yes
 build.target		swig-py
 destroot.target		install-swig-py DESTDIR=${destroot}
