OpenSceneGraph-devel: take maintainership, since I already have OpenSceneGraph
git-svn-id: https://svn.macports.org/repository/macports/trunk@70015 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/OpenSceneGraph-devel/Portfile
+++ b/dports/graphics/OpenSceneGraph-devel/Portfile
@@ -11,7 +11,7 @@ version         2.9.7
 revision        1
 platforms       darwin
 categories      graphics
-maintainers     nomaintainer
+maintainers     ryandesign openmaintainer
 license         OpenSceneGraph-0.0 wxWindows-3 LGPL-2.1
 description     high-performance 3D graphics toolkit
 
