fbopenssl and kerberos5 conflict on include/gssapi.h; see #25600
git-svn-id: https://svn.macports.org/repository/macports/trunk@70017 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/fbopenssl/Portfile
+++ b/dports/devel/fbopenssl/Portfile
@@ -1,7 +1,9 @@
 # $Id$
 
 PortSystem 1.0
+
 name             fbopenssl
+conflicts        kerberos5
 version          0.0.4
 revision         3
 categories       devel
