--- a/dports/net/kerberos5/Portfile
+++ b/dports/net/kerberos5/Portfile
@@ -3,7 +3,7 @@
 PortSystem                  1.0
 
 name                        kerberos5
-conflicts                   e2fsprogs
+conflicts                   e2fsprogs fbopenssl
 version                     1.7.1
 set branch                  [join [lrange [split ${version} .] 0 1] .]
 categories                  net security
