parsing failure, typo: distfile -> distfiles
git-svn-id: https://svn.macports.org/repository/macports/trunk@70018 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/mail/uagen/Portfile
+++ b/dports/mail/uagen/Portfile
@@ -33,7 +33,7 @@ distname            ${name}
 extract.suffix      .pl
 extract.mkdir       yes
 extract {
-    copy ${distpath}/${distfile} ${worksrcpath}/uagen
+    copy ${distpath}/${distfiles} ${worksrcpath}/uagen
 }
 
 use_configure       no
