libvpx: disable universal variant which fails with gcc 4.2
git-svn-id: https://svn.macports.org/repository/macports/trunk@70022 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/multimedia/libvpx/Portfile
+++ b/dports/multimedia/libvpx/Portfile
@@ -22,6 +22,9 @@ checksums       sha1    a18acb7a1a2fd62268e63aab860b43ff04669b9e \
 
 depends_lib     port:yasm
 
+# gcc-4.2: -E, -S, -save-temps and -M options are not allowed with multiple -arch flags
+universal_variant no
+
 configure.args  --enable-vp8 \
                 --enable-psnr \
                 --enable-postproc \
