texlive-bin:  - set C_INCLUDE_PATH and LIBRARY_PATH environment variables instead    of -I/-L command-line options to put the paths at the end of the    search order (#25772)  - do not install 'man' and 'latexmk' symlinks (#25778)
git-svn-id: https://svn.macports.org/repository/macports/trunk@70023 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/tex/texlive-bin/Portfile
+++ b/dports/tex/texlive-bin/Portfile
@@ -7,7 +7,7 @@ PortGroup       archcheck 1.0
 
 name            texlive-bin
 version         2009
-revision        3
+revision        4
 
 categories      tex
 maintainers     dports
@@ -114,7 +114,9 @@ configure.args  --mandir=${prefix}/share/man \
                 --disable-xindy
 
 configure.cppflags-delete   -I${prefix}/include
-configure.cppflags-append   -isystem${prefix}/include
+configure.cppflags-delete   -L${prefix}/lib
+configure.env-append        C_INCLUDE_PATH=${prefix}/include
+configure.env-append        LIBRARY_PATH=${prefix}/lib
 
 # work around bug in texlive makefiles where $OBJC is not recorded
 # during configure phase
@@ -130,6 +132,10 @@ post-destroot   {
     delete ${destroot}${prefix}/texmf-dist
     delete ${destroot}${texlive_texmfmain}
     delete ${destroot}${texlive_texmfdist}
+
+    # Do not install symlinks to scripts that we will not install
+    delete ${destroot}${prefix}/bin/man
+    delete ${destroot}${prefix}/bin/latexmk
 }
 
 post-activate {
