texlive-bin-extra: add dependency on latexmk port instead of installing the version in texlive (see #25778)
git-svn-id: https://svn.macports.org/repository/macports/trunk@70026 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/tex/texlive-bin-extra/Portfile
+++ b/dports/tex/texlive-bin-extra/Portfile
@@ -6,7 +6,7 @@ PortGroup           texlive 1.0
 
 name                texlive-bin-extra
 version             15618
-revision            2
+revision            3
 
 categories          tex
 maintainers         dports
@@ -18,6 +18,8 @@ checksums           md5     585285a1dde1b7e682f8fdf138ce7819 \
                     rmd160  2eeef746b05b2aefba1402ac5b0db9b9551f1467
 
 depends_lib         port:texlive-basic
+
+depends_run         port:latexmk
 
 texlive.exclude     texmf/doc/man/man1/asy.1 \
                     texmf/doc/man/man1/ctangle.1 \
@@ -45,6 +47,7 @@ texlive.exclude     texmf/doc/man/man1/asy.1 \
                     texmf/doc/man/man1/getnonfreefonts-sys.1 \
                     texmf/doc/man/man1/getnonfreefonts.1 \
                     texmf/doc/man/man1/lacheck.1 \
+                    texmf/doc/man/man1/latexmk.1 \
                     texmf/doc/man/man1/mkjobtexmf.1 \
                     texmf/doc/man/man1/patgen.1 \
                     texmf/doc/man/man1/pdftosrc.1 \
@@ -60,5 +63,7 @@ texlive.exclude     texmf/doc/man/man1/asy.1 \
                     texmf/doc/man/man1/xasy.1 \
                     texmf/doc/man/man5/synctex.5 \
                     texmf/doc/man/man1/xindy.1 \
+                    texmf-dist/doc/support/latexmk \
+                    texmf-dist/scripts/latexmk
 
 texlive.texmfport
