kerberos5: add openssl dependency, revbump for openssl 1.0.0a, fix build problem with openssl 1.0.0a; see #25816
git-svn-id: https://svn.macports.org/repository/macports/trunk@70028 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/kerberos5/Portfile
+++ b/dports/net/kerberos5/Portfile
@@ -5,6 +5,7 @@ PortSystem                  1.0
 name                        kerberos5
 conflicts                   e2fsprogs fbopenssl
 version                     1.7.1
+revision                    1
 set branch                  [join [lrange [split ${version} .] 0 1] .]
 categories                  net security
 maintainers                 nomaintainer
@@ -31,8 +32,12 @@ checksums                   md5     4206991cb65e0d0ab69748e63ca67388 \
 
 depends_build               bin:gpg:gnupg
 
+depends_lib                 port:openssl
+
 extract.cmd                 cat
 extract.pre_args
+
+patchfiles                  patch-pkinit_crypto_openssl.c.diff
 
 configure.args              --mandir=${prefix}/share/man
 
