Fixed the rest of the libffi problem.  An earlier change made sure ghc's internal libffi was linked with compiled executable, but in the compiler itself MacPorts's libffi was used instead of the internal one.  This fix makes sure the libffi built along with the compiler is actually linked into it.  (If MacPorts's libffi were linked into the compiler and later removed, the compiler would fail since the libffi port is not a dependency.  But making MacPorts's libffi a dependency is not a good idea, since ghc is only tested with the version of libffi shipped with it.  Hence a bit more path jiggery- pokery to get the right library linked in.)
git-svn-id: https://svn.macports.org/repository/macports/trunk@70029 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/lang/ghc/Portfile
+++ b/dports/lang/ghc/Portfile
@@ -6,7 +6,7 @@ PortGroup	archcheck 1.0
 name		ghc
 set canonicalname	ghc
 version		6.10.4
-revision	2
+revision	3
 categories	lang haskell
 maintainers	gwright
 platforms	darwin
@@ -374,6 +374,7 @@ pre-configure	{
 	  	puts $cfg "#"
 	  	puts $cfg "# Local configuration overrides for MacPorts"
 	  	puts $cfg "#"
+	  	puts $cfg "SRC_HC_OPTS += -L${worksrcpath}/libffi"
 	  	puts $cfg "SRC_HC_OPTS += -I${prefix}/include -L${prefix}/lib"
 
 		if {[variant_isset maintainer_debug]} {
@@ -381,6 +382,7 @@ pre-configure	{
 		}
 
 	  	puts $cfg "EXTRA_HSC2HS_OPTS += -I${prefix}/include --lflag=\"-L${prefix}/lib\""
+	  	puts $cfg "EXTRA_LD_OPTS += -L${worksrcpath}/libffi"
 	  	puts $cfg "EXTRA_LD_OPTS += -L${prefix}/lib"
 		puts $cfg "EXTRA_CABAL_CONFIGURE_FLAGS += --extra-include-dirs=${prefix}/include"
 		puts $cfg "EXTRA_CABAL_CONFIGURE_FLAGS += --extra-lib-dirs=${prefix}/lib"
