--- a/dports/textproc/pdftohtml/Portfile
+++ b/dports/textproc/pdftohtml/Portfile
@@ -1,3 +1,4 @@
+# -*- coding: utf-8; mode: tcl; tab-width: 4; truncate-lines: t; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:et:sw=4:ts=4:sts=4
 # $Id$
 
 PortSystem          1.0
@@ -6,6 +7,7 @@ name                pdftohtml
 version             0.40a
 categories          textproc
 platforms           darwin
+conflicts           poppler
 maintainers         nomaintainer
 description         pdf to html converter based on xpdf.
 long_description    ${description}
