php52: use proper suhosin patch for 5.2.14. The content of the patch has not changed so there is no need to rebuild.
git-svn-id: https://svn.macports.org/repository/macports/trunk@70032 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/lang/php52/Portfile
+++ b/dports/lang/php52/Portfile
@@ -369,16 +369,15 @@ variant suhosin description {Add Suhosin patch} {
             return -code error "incompatible Mac OS X version"
         }
     }
-    #set suhosin_patch_version   ${version}-0.9.7
-    set suhosin_patch_version   5.2.13-0.9.7
+    set suhosin_patch_version   ${version}-0.9.7
     set suhosin_patch           suhosin-patch-${suhosin_patch_version}.patch.gz
     patch_sites-append          http://download.suhosin.org/
     patchfiles-append           ${suhosin_patch}
     checksums-append \
         ${suhosin_patch} \
-            md5     8188e119ce7abce98b8f004de46fbac5 \
-            sha1    e2faf8db2d7facbd44cee2f737ce87732835d341 \
-            rmd160  63a022a5bf0fb8c6688f4c0ebcfaa8a437ea6935
+            md5     84cf0142b8a3637b8784b5ee1e6cbc07 \
+            sha1    0a12d3589f9c26dc7d6b6452ef7987b2e6527a30 \
+            rmd160  bc7790cd36dc4101322684b754db3ca2d4385ba6
 }
 
 destroot.args \
