p5-perlmagick: update to 6.59, new maintainer; see #25832
git-svn-id: https://svn.macports.org/repository/macports/trunk@70034 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/perl/p5-perlmagick/Portfile
+++ b/dports/perl/p5-perlmagick/Portfile
@@ -2,19 +2,32 @@
 
 PortSystem          1.0
 PortGroup           perl5 1.0
-perl5.setup         PerlMagick 6.32
-revision            2
-maintainers         nomaintainer
+
+perl5.setup         PerlMagick 6.59
+maintainers         futurelab.ch:astricker
 description         Perl extension for calling ImageMagick's libMagick methods
 long_description    ${description}
 
 platforms           darwin
 
-checksums           md5 a341de8299859630ca82b74ee7173204
+checksums           md5     1e9503c77a89d5e48db7b4c9d5aa1c41 \
+                    sha1    ec57329b5a9e31b0f00fb5cc45312ffe53827ff9 \
+                    rmd160  b30008a8e09e16e81948ecb0c8ebc38079d0bb2a
 
-homepage            http://search.cpan.org/~jcristy/PerlMagick-6.32/
 master_sites        http://search.cpan.org/CPAN/authors/id/J/JC/JCRISTY/
 
 depends_build-append port:bzip2 port:freetype port:jpeg port:libpng port:tiff \
                     port:zlib
 depends_lib-append  port:ImageMagick
+
+patchfiles          patch-Makefile.PL.diff
+
+post-patch {
+    if {[variant_isset universal]} {
+        set archflags ${configure.universal_cflags}
+    } else {
+        set archflags ${configure.cc_archflags}
+    }
+    reinplace "s|@ARCHFLAGS@|${archflags}|g" ${worksrcpath}/Makefile.PL
+    reinplace "s|@PREFIX@|${prefix}|g" ${worksrcpath}/Makefile.PL
+}
