--- a/dports/python/py26-pygraphviz/Portfile
+++ b/dports/python/py26-pygraphviz/Portfile
@@ -29,3 +29,7 @@ checksums               md5 5381633f9538804b24046eb96474668d \
 depends_lib-append      port:swig-python \
                         path:bin/dot:graphviz \
                         port:py26-distribute
+
+livecheck.type          regex
+livecheck.url           ${master_sites}
+livecheck.regex         "pygraphviz-(\\d+(?:\\.\\d+)*)${extract.suffix}"
