change latexmk dependency from texlive to texlive-latex to prevent circular dependency (#25836)
git-svn-id: https://svn.macports.org/repository/macports/trunk@70041 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/tex/latexmk/Portfile
+++ b/dports/tex/latexmk/Portfile
@@ -28,7 +28,7 @@ checksums           md5     f11333956bbeb1f51a087023e890841c \
                     sha1    925192f78f31cc966e5ed6beabb793e7a2742e3d \
                     rmd160  72bb264d884277d7bb0654ab73a52c28b9f5b2af
 
-depends_lib         bin:latex:texlive
+depends_lib         bin:latex:texlive-latex
 
 pre-configure {
     reinplace "s/\\(CPU usage\\.\\)\"/\\1\\\\n\"/" ${worksrcpath}/latexmk.pl
