apple-gcc42: clear archflags (#21440)
git-svn-id: https://svn.macports.org/repository/macports/trunk@70042 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/lang/apple-gcc42/Portfile
+++ b/dports/lang/apple-gcc42/Portfile
@@ -30,6 +30,10 @@ configure.args		--enable-languages=c,objc \
 configure.cflags
 configure.ldflags
 configure.cppflags
+configure.cc_archflags
+configure.cxx_archflags
+configure.objc_archflags
+configure.ld_archflags
 configure.env		PATH="/bin:/usr/bin:/sbin:/usr/sbin"
 
 build.dir		${configure.dir}
@@ -44,4 +48,3 @@ post-destroot {
 
 livecheck.type		moddate
 livecheck.url		${master_sites}
-
