--- a/dports/tex/latexmk/Portfile
+++ b/dports/tex/latexmk/Portfile
@@ -3,7 +3,7 @@
 PortSystem          1.0
 
 name                latexmk
-version             4.16a
+version             4.18
 categories          tex print
 platforms           darwin
 maintainers         vinc17 openmaintainer
@@ -24,15 +24,11 @@ distname            latexmk
 dist_subdir         ${name}/${version}
 use_zip             yes
 
-checksums           md5     f11333956bbeb1f51a087023e890841c \
-                    sha1    925192f78f31cc966e5ed6beabb793e7a2742e3d \
-                    rmd160  72bb264d884277d7bb0654ab73a52c28b9f5b2af
+checksums           md5     12a2c3ea16d4190895e483795f566ae7 \
+                    sha1    7694aaa764adc8ec1c0628fe2ecaad6821fb0b30 \
+                    rmd160  ba472b5f14445b9625d34e6bf78f88cfe889a9bf
 
 depends_lib         bin:latex:texlive-latex
-
-pre-configure {
-    reinplace "s/\\(CPU usage\\.\\)\"/\\1\\\\n\"/" ${worksrcpath}/latexmk.pl
-}
 
 use_configure       no
 build               {}
