latexmk: changed depends_lib into depends_run.
git-svn-id: https://svn.macports.org/repository/macports/trunk@70045 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/tex/latexmk/Portfile
+++ b/dports/tex/latexmk/Portfile
@@ -28,7 +28,7 @@ checksums           md5     12a2c3ea16d4190895e483795f566ae7 \
                     sha1    7694aaa764adc8ec1c0628fe2ecaad6821fb0b30 \
                     rmd160  ba472b5f14445b9625d34e6bf78f88cfe889a9bf
 
-depends_lib         bin:latex:texlive-latex
+depends_run         bin:latex:texlive-latex
 
 use_configure       no
 build               {}
