texinfo: install texinfo.tex and related files (fixes #25761).
git-svn-id: https://svn.macports.org/repository/macports/trunk@70046 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/textproc/texinfo/Portfile
+++ b/dports/textproc/texinfo/Portfile
@@ -4,6 +4,7 @@ PortSystem 1.0
 
 name            texinfo
 version         4.13
+revision        1
 categories      textproc
 platforms       darwin
 maintainers     vinc17 openmaintainer
@@ -26,6 +27,9 @@ depends_lib     port:gettext \
                 port:libiconv \
                 port:ncurses
 
+destroot.target-append  install-tex
+destroot.destdir-append TEXMF=${prefix}/share/texmf
+
 pre-destroot {
     xinstall -d "${destroot}${prefix}/share/doc/${name}"
     xinstall -m 644 -v -W "${worksrcpath}" AUTHORS INTRODUCTION NEWS TODO \
@@ -35,6 +39,9 @@ pre-destroot {
 post-destroot {
     file delete -force ${destroot}${prefix}/lib/charset.alias
 }
+
+post-activate   { system "mktexlsr" }
+post-deactivate { system "mktexlsr" }
 
 # We need to support names like 'texinfo-4.8a.tar.bz2'.
 livecheck.type      regex
