ImageMagick: bring back the +perl variant by user request until p5-perlmagick can be switched to use the ImageMagick source so that its version doesn't lag; see #25844
git-svn-id: https://svn.macports.org/repository/macports/trunk@70051 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/ImageMagick/Portfile
+++ b/dports/graphics/ImageMagick/Portfile
@@ -185,8 +185,20 @@ variant no_x11 {
     configure.args-append   --without-x
 }
 
-variant perl description {Obsolete method for installing PerlMagick} {
-    notes-append {The +perl variant is obsolete; install the p5-perlmagick port instead}
+variant perl description {Install PerlMagick} {
+    depends_lib-append      path:bin/perl:perl5
+    configure.args-delete   --without-perl
+    configure.args-append   --with-perl=${prefix}/bin/perl
+    post-destroot {
+        foreach packlist [exec find ${destroot} -name .packlist] {
+            ui_info "Fixing packlist ${packlist}"
+            reinplace "s|${destroot}||" ${packlist}
+        }
+        foreach badfile [exec find ${destroot} -name perllocal.pod] {
+            ui_info "Removing ${badfile}"
+            file delete ${badfile}
+        }
+    }
 }
 
 variant q8 conflicts q16 q32 description {Use 8 bits per pixel quantum} {
